--- a/app/src/main/res/layout/map2.xml
+++ b/app/src/main/res/layout/map2.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_main"
+    android:id="@+id/layout_main2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MapsActivity"
-   >
-
+    tools:context=".MapsActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -29,7 +26,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
         android:background="?android:attr/windowBackground"
@@ -38,7 +35,4 @@
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/menu_bottom"
         />
-
-
 </LinearLayout>
-
