--- a/app/src/main/res/layout/mapforhos.xml
+++ b/app/src/main/res/layout/mapforhos.xml
@@ -1,30 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_main"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MapsActivity"
-   >
+    tools:context=".HosActivity">
 
-    <FrameLayout
+    <com.google.android.gms.maps.MapView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="10">
-        <fragment
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            class="com.google.android.gms.maps.SupportMapFragment"
-            tools:context=".MapsActivity" />
-    </FrameLayout>
-
-
+        android:id="@+id/mapView3"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
@@ -37,7 +28,4 @@
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/menu_bottom"
         />
-
-
-</LinearLayout>
-
+</androidx.constraintlayout.widget.ConstraintLayout>
