--- a/app/src/main/res/layout/mapforaed.xml
+++ b/app/src/main/res/layout/mapforaed.xml
@@ -8,8 +8,8 @@
     tools:context=".AedActivity">
 
     <com.google.android.gms.maps.MapView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:id="@+id/mapView2"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
